# course_work_git_poetry

./: README.md  pyproject.toml
course_work_git_poetry/: main.py  utils.py
tests/: conftest.py  test_utils.py
