[tool.poetry]
name = "course-work-git-poetry"
version = "0.1.0"
description = ""
authors = ["Andrew Kurin <andrew_kurin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
